src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__envs__tests__snapshot_render_envs_empty.snap
---
source: src/adapters/tui/widgets/envs.rs
assertion_line: 273
expression: terminal.backend()
---
"┌Environments──────────────────────────────────────────────────────────────────┐"
"│┌Status──────────────────────────────────────────────────────────────────────┐│"
"││Dir: /tmp/omakure_envs_snapshot_empty/.omakure/envs                         ││"
"││Active: <none>                                                              ││"
"││Defaults: 0                                                                 ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Files────────────────────────────────┐┌Preview──────────────────────────────┐│"
"││No environment files found.          ││No environment files found.          ││"
"│└─────────────────────────────────────┘└─────────────────────────────────────┘│"
"│Up/Down move, PgUp/PgDn scroll, Enter activate, d deactivate, r reload, Esc ba│"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
