src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__envs__tests__snapshot_render_envs_with_files.snap
---
source: src/adapters/tui/widgets/envs.rs
assertion_line: 178
expression: terminal.backend()
---
"┌Environments──────────────────────────────────────────────────────────────────┐"
"│┌Status──────────────────────────────────────────────────────────────────────┐│"
"││Dir: /tmp/omakure_envs_snapshot_with_files/.omakure/envs                    ││"
"││Active: <none>                                                              ││"
"││Defaults: 0                                                                 ││"
"│└────────────────────────────────────────────────────────────────────────────┘│"
"│┌Files────────────────────────────────┐┌Preview──────────────────────────────┐│"
"││>   dev.conf                         ││HOST=localhost                       ││"
"││    prod.conf                        ││PORT=3000                            ││"
"││                                     ││                                     ││"
"││                                     ││                                     ││"
"│└─────────────────────────────────────┘└─────────────────────────────────────┘│"
"│Up/Down move, PgUp/PgDn scroll, Enter activate, d deactivate, r reload, Esc ba│"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
